<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">user Name</string>
    <string name="todo">TODO</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="_20_50_50">20-50-50</string>
    <string name="see_all_700_comments"><![CDATA[See All 700 comments --->]]></string>
    <string name="post">Post</string>
    <string name="timmy_aditya">Timmy aditya</string>
    <string name="binod_binod_binod">binod binod binod</string>
    <string name="add_a_comment">Add A Comment</string>
    <string name="enter_delivery_address_from_this_order">enter_delivery_address_from_this_order</string>
    <string name="add">Add</string>
    <string name="enter_comment">Enter comment</string>
    <string name="comments">comments:-</string>
    <string name="todo_note">todo note</string>
    <string name="desc">desc</string>
    <string name="title_activity_todo">TodoActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="save_button">Save</string>
    <string name="note">Note</string>
    <string name="enter_todo">Enter Todo</string>
    <string name="update_text">update</string>
    <string name="edit_time">Edit</string>
    <string name="sure_text">Are you sure you want to delete?</string>
    <string name="yes_text">yes</string>
    <string name="no_text">no</string>
</resources>