<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="8dp">

    <EditText
        android:id="@+id/edit_text_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_comment"
        android:padding="12dp"
        android:lines="4"
        android:gravity="top"
        android:autofillHints="@string/enter_delivery_address_from_this_order"
        android:inputType="text" />

    <Button
        android:id="@+id/bt_done"
        android:text="@string/add"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>