<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_id"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/title"
                android:text="@string/enter_todo"
                android:layout_centerHorizontal="true"
                android:textStyle="italic"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/todoNotepopup"
                android:layout_below="@+id/title"
                android:layout_width="match_parent"
                android:hint="@string/note"
                android:layout_height="wrap_content"
                android:autofillHints="@string/desc"
                android:inputType="text" />

            <Button
                android:id="@+id/saveButton"
                android:layout_below="@+id/todoNotepopup"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/save_button"
                android:layout_marginTop="5dp"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>