<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="15dp"
    app:cardCornerRadius="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/profile_image_post_row"
                android:src="@drawable/image_one"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="10dp"/>

            <TextView
                android:id="@+id/username_post_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textSize="25sp" />

        </LinearLayout>



        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_post_row"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:scaleType="fitXY"
                android:src="@drawable/image_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/title_post_row"
                    android:padding="10dp"
                    android:text="@string/title"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


                <ImageButton
                    android:layout_alignParentEnd="true"
                    android:id="@+id/like_post_row"
                    android:src="@drawable/ic_baseline_check_circle_24"
                    android:background="@android:color/transparent"
                    android:padding="3dp"
                    android:layout_marginRight="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>







            <TextView
                android:id="@+id/description_post_row"
                android:padding="10dp"
                android:text="@string/description"
                android:paddingTop="15dp"
                android:paddingStart="10dp"
                android:paddingEnd="15dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/timestamp_post_row"
                android:padding="5dp"
                android:text="@string/_20_50_50"
                android:textStyle="italic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/go_to_comment_post_row"
                android:text="@string/see_all_700_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>

    </LinearLayout>





</androidx.cardview.widget.CardView>