<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/frame_add">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <ImageView
                android:id="@+id/image_add_new_post"
                android:src="@drawable/ic_baseline_camera_enhance_24"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/todo" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/title_add_new_post"
                    android:padding="10dp"
                    android:text="@string/title"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="enter title"
                    android:inputType="text"
                    tools:ignore="LabelFor" />

            </RelativeLayout>



            <EditText
                android:id="@+id/description_add_new_post"
                android:padding="10dp"
                android:text="@string/description"
                android:paddingTop="15dp"
                android:paddingStart="10dp"
                android:paddingEnd="15dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="enter description"
                android:inputType="text"
                tools:ignore="LabelFor" />

        </LinearLayout>

        <Button
            android:id="@+id/savePost"
            android:text="@string/post"
            android:layout_margin="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ProgressBar
                android:id="@+id/progress_bar_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                />


        </LinearLayout>

    </LinearLayout>





</FrameLayout>