<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
            <TextView
                android:id="@+id/todo_text"
                android:text="@string/todo_note"
                android:textSize="18sp"
                android:textStyle="italic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/item_date"
                android:text="@string/app_name"
                android:textSize="18sp"
                android:textStyle="italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="5dp">

                <ImageView
                    android:id="@+id/bt_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:src="@drawable/ic_baseline_edit_24"
                    android:contentDescription="@string/desc" />

                <ImageView
                    android:id="@+id/bt_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:src="@drawable/ic_baseline_delete_24"
                    android:contentDescription="@string/desc" />

            </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>